--- a/task1.ipynb
+++ b/task1.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing the Header Files "
+    "### Importing the Necessary Libraries "
    ]
   },
   {
